@@ -1,3 +1,6 @@
+HEAD
+	+ EBox::WebServer::removeNginxInclude does not longer throws
+	  a exception if the path to remove is not included
 3.3
 	+ Use printableName in Configure Module popup
 	+ Replace fork of Apache2::AuthCookie with libapache2-authcookie-perl
